tests/baselines/reference/unusedVariablesinForLoop4.errors.txt
unusedVariablesinForLoop4.ts(4,13): error TS6133: 'x' is declared but its value is never read.


==== unusedVariablesinForLoop4.ts (1 errors) ====
    function f1 () {
        for (const elem of ["a", "b", "c"]) {
            elem;
            var x = 20;
                ~
!!! error TS6133: 'x' is declared but its value is never read.
        }
    }